k8s/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  namespace: cool-namespace
spec:
  controller: k8s.io/ingress-nginx
