k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cool-counter-redis
  namespace: cool-namespace
spec:
  selector:
    matchLabels:
      pod: cool-counter-redis
  template:
    metadata:
      labels:
        pod: cool-counter-redis
    spec:
      containers:
      - name: redis
        image: redis
        imagePullPolicy: Never
        ports:
        - containerPort: 6379
