k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cool-counter-web
  namespace: cool-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      pod: cool-counter-web
  template:
    metadata:
      labels:
        pod: cool-counter-web
    spec:
      containers:
      - name: cool-counter
        image: cool-counter
        imagePullPolicy: Never
        ports:
        - containerPort: 4567
