k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cool-counter-redis
  namespace: cool-namespace
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    pod: cool-counter-redis
