k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cool-counter-web
  namespace: cool-namespace
spec:
  selector:
    pod: cool-counter-web
  ports:
    - protocol: TCP
      port: 4567
      targetPort: 4567
